Add dependency info to the hadoop barclamp

--- a/crowbar.yml
+++ b/crowbar.yml
@@ -19,6 +19,10 @@ barclamp:
   name: hadoop
   display: Hadoop
   version: 0
+  requires:
+    - crowbar
+    - ganglia
+    - nagios
 
 crowbar:
   layout: 1
