HADOOP BARCLAMP - Reworked config event notifiers (using subscribe for shared hadoop config files). The processes were not always restarting properly on config change events. Added the cloudera enterprise flag to the UI code. This was implemented in the code, config and proposal but it never got added to the UI HAML code.

--- a/crowbar.yml
+++ b/crowbar.yml
@@ -36,6 +36,7 @@ locale_additions:
           deployment: Deployment        
         edit_attributes:
           core_attributes: Hadoop Core Attributes
+          cloudera_enterprise_scm: Cloudera Enterprise Support
           fs_checkpoint_dir: fs_checkpoint_dir
           fs_checkpoint_edits_dir: fs_checkpoint_edits_dir
           fs_checkpoint_period: fs_checkpoint_period
