--- a/crowbar.yml
+++ b/crowbar.yml
@@ -289,7 +289,8 @@ rpms:
   pkgs:
     - cloudera-scm-agent
     - cloudera-scm-server
-    - jdk
+    # JDK dependency will be magically satisfied by the Java package below.
+    # - jdk
     - hadoop-0.20
     - hadoop-0.20-namenode
     - hadoop-0.20-jobtracker
