Have the Hadoop barclamp download the Cloudera SCM packages directly, not through a repo.

--- a/crowbar.yml
+++ b/crowbar.yml
@@ -286,11 +286,11 @@ locale_additions:
 rpms:
   repos:
     - bare cloudera-cdh3 10 http://archive.cloudera.com/redhat/cdh/3/
-    # Repo for Hue and cloudera scm stuff.  Dell Internal!
-    - bare cloudera-enterprise 10 http://10.9.244.31:3389/mirrors/cloudera/enterprise/redhat/5/x86_64/RPMS/
+  raw_pkgs:
+    # For the Cloudera SCM pieces
+    - http://10.9.244.31:3389/mirrors/cloudera/enterprise/redhat/5/x86_64/RPMS/cloudera-scm-agent-3.5.1.7+6-1.x86_64.rpm
+    - http://10.9.244.31:3389/mirrors/cloudera/enterprise/redhat/5/x86_64/RPMS/cloudera-scm-server-3.5.1.7+6-1.noarch.rpm
   pkgs:
-    - cloudera-scm-agent
-    - cloudera-scm-server
     # JDK dependency will be magically satisfied by the Java package below.
     # - jdk
     - hadoop-0.20
