--- a/crowbar.yml
+++ b/crowbar.yml
@@ -24,7 +24,7 @@ barclamp:
   api_version: "v2"
   api_version_accepts: "v2"
   requires:
-    - @crowbar
+    - '@crowbar'
   member:
     - apachehadoop
 
